# hacker-news-aggregator

./: .gitignore  CHANGELOG.md  README.md  hacker-news-aggregator.cabal
app/: Main.hs
src/HackerNews/: Cli.hs  CommentAggregator.hs  HttpClient.hs  HttpWorker.hs  Logger.hs  TopStoriesCollector.hs  TopStoriesManager.hs  Types.hs  Utils.hs
