cabal-version:      3.4
name:               hacker-news-aggregator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             kindofdev
maintainer:         jose.velasco.home@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HackerNews.Types
                    , HackerNews.HttpWorker
                    , HackerNews.TopStoriesManager
                    , HackerNews.CommentAggregator
                    , HackerNews.Logger
                    , HackerNews.Cli
                    , HackerNews.Utils

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , req
                    , aeson ==2.0.3.0
                    , text
                    , stm
                    , containers
                    , extra
                    , text-format-simple
                    , PSQueue
                    , async
                    , safe-exceptions
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable cardashift-challenge
    main-is:          Main.hs
                 

    -- Modules included in this executable, other than Main.
    -- other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>=4.14.1.0
        , hacker-news-aggregator
        , text-format-simple
        , stm
        , async
        , safe-exceptions

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -Wall 
